; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_oob_id_match_execute.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_oob_id_match_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XMIT_OFFSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oob_id_match_execute(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [32 x i32], align 16
  %5 = alloca i32, align 4
  %6 = alloca [2048 x i8], align 16
  %7 = alloca i8**, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i64, i64* @XMIT_OFFSET, align 8
  %9 = add nsw i64 2048, %8
  %10 = sub nsw i64 %9, 64
  %11 = call i32 @oob_setup(i64 %10)
  store i32 %11, i32* %3, align 4
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %20, %1
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 32
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = call i32 (...) @packet_sock_kmalloc()
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds [32 x i32], [32 x i32]* %4, i64 0, i64 %18
  store i32 %16, i32* %19, align 4
  br label %20

20:                                               ; preds = %15
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %5, align 4
  br label %12

23:                                               ; preds = %12
  %24 = getelementptr inbounds [2048 x i8], [2048 x i8]* %6, i64 0, i64 0
  %25 = call i32 @memset(i8* %24, i32 0, i32 2048)
  %26 = getelementptr inbounds [2048 x i8], [2048 x i8]* %6, i64 0, i64 64
  %27 = bitcast i8* %26 to i8**
  store i8** %27, i8*** %7, align 8
  %28 = load i8*, i8** %2, align 8
  %29 = load i8**, i8*** %7, align 8
  store i8* %28, i8** %29, align 8
  %30 = getelementptr inbounds [2048 x i8], [2048 x i8]* %6, i64 0, i64 0
  %31 = getelementptr inbounds i8, i8* %30, i64 2
  %32 = call i32 @oob_write(i8* %31, i32 70)
  store i32 0, i32* %5, align 4
  br label %33

33:                                               ; preds = %42, %23
  %34 = load i32, i32* %5, align 4
  %35 = icmp slt i32 %34, 32
  br i1 %35, label %36, label %45

36:                                               ; preds = %33
  %37 = load i32, i32* %5, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds [32 x i32], [32 x i32]* %4, i64 0, i64 %38
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @packet_sock_id_match_trigger(i32 %40)
  br label %42

42:                                               ; preds = %36
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %5, align 4
  br label %33

45:                                               ; preds = %33
  ret void
}

declare dso_local i32 @oob_setup(i64) #1

declare dso_local i32 @packet_sock_kmalloc(...) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @oob_write(i8*, i32) #1

declare dso_local i32 @packet_sock_id_match_trigger(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
